AddressInput - Fixing text alignment (#470)

--- a/packages/wix-ui-core/src/components/AddressInput/AddressInput.st.css
+++ b/packages/wix-ui-core/src/components/AddressInput/AddressInput.st.css
@@ -20,3 +20,7 @@
 .icon {
 
 }
+
+.optionContent {
+    flex: 1;
+}
